code/tui/snapshots/fullscreen/frame/policy_top_tip_current_and_next.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: visible
---
  .                                                                                                        [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                     /permission to change permissions  
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                                     
  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
  ⏸ current: Manual · ⏩  next: Auto                                                                                     
  Enter send  ·  ← Dashboard  ·  shift+tab mode  ·  shift+↓/↑ effort
