code/tui/snapshots/fullscreen/frame/policy_top_tip_expired.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 120, 20)"
---
  .                                                                                                        [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                                     
  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
  ⏸ current: Manual · ▶ next: Bypass permissions                                                                        
                                                                    Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
