code/tui/snapshots/fullscreen/frame/slash_popup_missing_character_match.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ─────────────────────────────────────────────────────────────────────── 0/2   
  /config                    show the current configuration                     
  /mcp                       list configured MCP tools                          
  ────────────────────────────────────────────────────────────────────────────  
  > /cofig                                                                      
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
  Enter send
