code/tui/snapshots/fullscreen/frame/slash_popup_scrolled_to_last_command.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ───────────────────────────────────────────────────────────────────── 36/36   
  /issue                     select issues to develop together                 │
  /pr                        ask the Agent to create or inspect a pull request │
  /marketplace               find and install Marketplace packages             │
  /plugins                   manage installed packages and exact versions      │
  /lsp                       manage language servers and find packages         │
  /voice                     dictate into the current draft; run again to stop ┃
  ────────────────────────────────────────────────────────────────────────────  
  > /                                                                           
  ─────────────────────────────────────────────────────────── Automatic model   
  ⏸ Manual                                                                      
                                                                    Enter send
